--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -429,8 +429,10 @@
         $('#co_FechaFactura_vct').datepicker({
             autoclose: true
         })
-
     });
+
+    get_list_tipo_doc();
+
     // funciones calcular total
     $("#co_FechaFactura").change(function ()
     {
