--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_det.cshtml
@@ -119,7 +119,7 @@
             });
         });
 
-
+        settings.ClientSideEvents.EndCallback = "function (s,e){CalcularSaldo();}";
     });
 }
 @grid.Bind(Model).GetHtml()
