--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribucion_det.cshtml
@@ -41,8 +41,8 @@
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("pr_descripcion", "Descripción").Width = Unit.Percentage(70);
-                p.Columns.Add("lote_num_lote", "Lote").Width = Unit.Percentage(15);
-                p.Columns.Add("lote_fecha_vcto", "Fecha exp.").Width = Unit.Percentage(15);
+                //p.Columns.Add("lote_num_lote", "Lote").Width = Unit.Percentage(15);
+                //p.Columns.Add("lote_fecha_vcto", "Fecha exp.").Width = Unit.Percentage(15);
 
                 p.TextField = "pr_descripcion";
                 p.ValueField = "IdProducto";
@@ -79,3 +79,4 @@
     });
 }
 @grid.Bind(Model).GetHtml()
+
