--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -70,6 +70,14 @@
 @grid.Bind(Model).GetHtml()
 
 
+<script>
+    function refresch_partial() {
+
+        GridViewPartial_por_distribuir.PerformCallback();
+    };
+</script>
+
+
 <div class="modal fade" id="detalle_distr" role="dialog">
     <div class="modal-dialog modal-lg">
         <!-- Modal content-->
