--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -56,9 +56,6 @@
                     settingsBtn.Name = "btn" + c.KeyValue;
                     settingsBtn.Text = "Asignar";
                     settingsBtn.ClientSideEvents.Click = "function(s, e) {Mostrar('" + c.KeyValue + "');}";
-                    // settingsBtn.ClientSideEvents.Click = "function(s, e) { e.customArgs['IdProducto_padre'] = '" + c.KeyValue+ "'; }";
-                    // settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipoPersona').val(); }";
-
                 }).Render();
             });
         });
@@ -82,14 +79,15 @@
     <div class="modal-dialog modal-lg">
         <!-- Modal content-->
         <div class="modal-content">
+           
             <div class="modal-header">
-                <button type="button"  class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Detalle</h4>
             </div>
             <div class="modal-body">
                 @Html.Action("GridViewPartial_distribucion_det")
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Add lote</button>
                 <button type="button" class="btn btn-default" onclick="cerrar();">Close</button>
             </div>
         </div>
