--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_CmbCliente_Cobranza.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_CmbCliente_Cobranza.cshtml
@@ -15,7 +15,8 @@
         settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
-        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);        
+        settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "VaciarLista";
     })
     .BindList(new Core.Erp.Web.Areas.CuentasPorCobrar.Controllers.CobranzaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.CuentasPorCobrar.Controllers.CobranzaController().get_info_bajo_demanda)
     .Bind(Model.IdEntidad);
