--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
@@ -128,7 +128,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                
+
             },
             error: function (error) {
             }
@@ -138,7 +138,7 @@
 </script>
 
 
-@using (Html.BeginForm("Nuevo", "Cobranza", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "Cobranza", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (@ViewBag.mensaje != null)
     {
@@ -172,6 +172,7 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdSucursal)
     @Html.HiddenFor(q => q.IdCobro)
+    @Html.HiddenFor(q => q.IdCobro_tipo)
     <div class="row">
         <div class="col-md-8">
             <div class="col-md-12">
