--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
@@ -61,7 +61,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdOrden_giro_Tipo">Tipo nota*</label>
-                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
                     @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -102,27 +102,27 @@
                             </div>
                         </div>
                     </div>
-                <div class="row">
+                <div class="row" id="div_tipo">
                     <div class="col-md-12">
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="co_serie">Serie*</label>
-                                @Html.TextBoxFor(q => q.cn_serie1, new { @class = "form-control" })
+                                @Html.TextBoxFor(q => q.cn_serie1, new { @class = "form-control" ,@id="cn_serie1"})
                                 @Html.ValidationMessageFor(q => q.cn_serie2, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-2">
                             <div class="form-group">
-                                <label for="cn_Nota">Numero documento*</label>
-                                @Html.TextBoxFor(q => q.cn_Nota, new { @class = "form-control" })
+                                <label for="cn_Nota">Número documento*</label>
+                                @Html.TextBoxFor(q => q.cn_Nota, new { @class = "form-control" ,@id="cn_Nota"})
                                 @Html.ValidationMessageFor(q => q.cn_Nota, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-8">
                             <div class="form-group">
-                                <label for="cn_Nota">Numero autorización*</label>
-                                @Html.TextBoxFor(q => q.cn_Autorizacion, new { @class = "form-control" })
+                                <label for="cn_Nota">Número autorización*</label>
+                                @Html.TextBoxFor(q => q.cn_Autorizacion, new { @class = "form-control" , @id="cn_Autorizacion"})
                                 @Html.ValidationMessageFor(q => q.cn_Autorizacion, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                     <div class="col-md-3">
                                         <div class="form-group">
                                             <label for="num_docu_Modificar">Numero documento*</label>
-                                            @Html.TextBoxFor(q => q.cn_num_doc_modificado, new { @class = "form-control" })
+                                            @Html.TextBoxFor(q => q.cn_num_doc_modificado, new { @class = "form-control" , @id= "cn_num_doc_modificado" })
                                             @Html.ValidationMessageFor(q => q.cn_num_doc_modificado, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -325,8 +325,20 @@
                         $('#cn_Fecha_vcto').datepicker({
                             autoclose: true
                         })
+                        
+                        $("#cn_num_doc_modificado").change(function () {
+                            rellenar_ceros();
 
+                        });
+                        $("#cn_Nota").change(function () {
+                            rellenar_ceros_izquierda();
+
+                        });
+                        $("#IdTipoNota").change(function () {
+                            ocultar_mostrar_div();
+                        });
                     });
+
                     // funciones calcular total
                     $("#cn_fecha").change(function () {
                         var d = new Date($("#cn_fecha").val());
@@ -352,6 +364,26 @@
                         get_list_tipo_doc();
                     });
 
+                    function rellenar_ceros_izquierda() {
+                        var str = "" + Number($("#cn_Nota").val());
+                        var pad = "000000000";
+                        var doc = pad.substring(0, pad.length - str.length) + str;
+                        $("#cn_Nota").val(doc);
+                    }
+                    function rellenar_ceros() {
+                        var sts = "" + Number($("#cn_num_doc_modificado").val());
+                        var pad = "000000000";
+                        var doc = pad.substring(0, pad.length - sts.length) + sts;
+                        $("#cn_num_doc_modificado").val(doc);
+                    }
+                    function ocultar_mostrar_div() {
+                        var tipo_nota = $("#IdTipoNota").val();
+                        if (tipo_nota == "T_TIP_NOTA_INT") {
+                            $("#div_tipo").hide();
+                        } else {
+                            $("#div_tipo").show();
+                        }
+                    }
 
                     function actualizar_valores() {
                         var base_iva = $("#cn_subtotal_iva").val();
